Fix divider contrast and section-newsletter in post page

--- a/src/sass/layouts/_post-content.scss
+++ b/src/sass/layouts/_post-content.scss
@@ -266,7 +266,7 @@
     position: relative;
     margin: 30px 0;
     border: 0;
-    border-top: 1px solid var(--secondary-subtle-color);
+    border-top: 1px solid var(--titles-color);
 
     @include respond-to("medium") {
       margin: 50px 0;
@@ -280,8 +280,8 @@
       width: 10px;
       height: 10px;
       border-radius: 50%;
-      background-color: var(--secondary-subtle-color);
-      @include bs(0 0 0 10px var(--background-color));
+      background-color: var(--titles-color);
+      @include bs(0 0 0 10px var(--titles-color));
       @include transform(translate(-50%, -50%));
 
       @include respond-to("medium") {
